refactor(all): multiple refactorings and code cleanups